--- a/css/d3.slider.css
+++ b/css/d3.slider.css
@@ -1,7 +1,7 @@
 .d3-slider {
     position: relative;
     font-family: Verdana,Arial,sans-serif;
-    font-size: 1.1em;
+    font-size: 1.0em;
     border: 1px solid #aaaaaa;
     z-index: 2;
 }
@@ -28,7 +28,7 @@
 
 .d3-slider-vertical {
     width: .8em;
-    height: 300px;
+    height: 260px;
     margin-left:20px;
     margin-top:30px;
 }      
@@ -66,9 +66,7 @@
     left: .8em;
 }
 
-.d3-slider-axis path
-
- {
+.d3-slider-axis path {
     stroke-width: 0;
     fill: none;
 }
